--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
+  "name": "pulseforum",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-"engines": {
-  "node": "20.x"
-}
-  "name": "pulseforum",
-  "version": "1.0.0",
-  "description": "",
-  "main": "db.js",
+  "engines": {
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.0",
